update item list

--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -17,8 +17,9 @@
         android:id="@+id/iv_poster"
         android:layout_width="100dp"
         android:layout_height="0dp"
-        android:paddingEnd="12dp"
-        android:paddingRight="12dp"
+        android:cropToPadding="true"
+        android:scaleType="fitXY"
+        app:imageUrl="@{movie.posterPath}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,6 +29,8 @@
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:ellipsize="end"
         android:maxLines="2"
