--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -11,7 +11,7 @@
   </data>
   <android.support.constraint.ConstraintLayout
       android:layout_width="match_parent"
-      android:layout_height="125dp"
+      android:layout_height="175dp"
       android:paddingEnd="@dimen/spacing_tiny"
       android:paddingRight="@dimen/spacing_tiny"
       >
@@ -32,14 +32,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/spacing_tiny"
-        android:layout_marginRight="@dimen/spacing_tiny"
-        android:layout_marginStart="@dimen/spacing_tiny"
+        android:layout_marginStart="@dimen/spacing_small"
         android:layout_marginTop="@dimen/spacing_tiny"
         android:ellipsize="end"
         android:maxLines="2"
         android:text="@{movie.title}"
         app:layout_constraintLeft_toRightOf="@+id/iv_poster"
         app:layout_constraintRight_toLeftOf="@+id/iv_favorite"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM"
         style="@style/TextAppearance.AppCompat.Title"
         />
@@ -47,9 +47,8 @@
         android:id="@+id/iv_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/spacing_tiny"
-        android:layout_marginRight="@dimen/spacing_tiny"
-        app:layout_constraintBaseline_toBaselineOf="@id/tv_title"
+        android:layout_marginEnd="@dimen/spacing_small"
+        android:layout_marginRight="@dimen/spacing_small"
         app:layout_constraintBottom_toBottomOf="@+id/tv_title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_title"
@@ -59,25 +58,27 @@
         android:id="@+id/tv_overview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_tiny"
+        android:layout_marginTop="@dimen/spacing_normal"
         android:ellipsize="end"
         android:fontFamily="sans-serif-condensed"
         android:maxLines="3"
         android:text="@{movie.overview}"
         app:layout_constraintLeft_toLeftOf="@+id/tv_title"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_favorite"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        tools:text="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM"
         style="@style/TextAppearance.AppCompat.Body1"
         />
     <TextView
         android:id="@+id/tv_valoration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_small"
         android:fontFamily="cursive"
         android:text='@{""+movie.voteAverage}'
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_overview"
+        app:layout_constraintRight_toRightOf="@+id/iv_favorite"
+        app:layout_constraintTop_toBottomOf="@+id/tv_overview"
         tools:text="6.7"
         style="@style/TextAppearance.AppCompat.Headline"
         />
