--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -3,7 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     >
-
+  <data>
+    <variable
+        name="movie"
+        type="com.amarinag.amgmoviedb.model.Movie"
+        />
+  </data>
   <android.support.v4.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -15,7 +20,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="texto muy largo"
+        android:text="@{movie.overview}"
         />
 
   </android.support.v4.widget.NestedScrollView>
