--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -39,6 +39,7 @@
             android:layout_height="300dp"
             android:fitsSystemWindows="true"
             android:scaleType="centerCrop"
+            app:imageUrl="@{movie.posterPath}"
             app:layout_collapseMode="parallax"
             app:srcCompat="@mipmap/ic_launcher"
             />
@@ -49,18 +50,21 @@
             android:layout_height="?attr/actionBarSize"
             app:layout_collapseMode="pin"
             app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:title="@{movie.title}"
             />
 
       </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_detail" />
+    <include
+        layout="@layout/content_detail"
+        app:movie="@{movie}"
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:tint="@android:color/white"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
