--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@{movie.overview}"
+        android:transitionName="overview"
         />
 
   </android.support.v4.widget.NestedScrollView>
