--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -26,6 +26,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher"
+        android:transitionName="poster"
         />
     <TextView
         android:id="@+id/tv_title"
@@ -37,6 +38,7 @@
         android:ellipsize="end"
         android:maxLines="2"
         android:text="@{movie.title}"
+        android:transitionName="title"
         app:layout_constraintLeft_toRightOf="@+id/iv_poster"
         app:layout_constraintRight_toLeftOf="@+id/iv_favorite"
         app:layout_constraintTop_toTopOf="parent"
@@ -63,6 +65,7 @@
         android:fontFamily="sans-serif-condensed"
         android:maxLines="3"
         android:text="@{movie.overview}"
+        android:transitionName="overview"
         app:layout_constraintLeft_toLeftOf="@+id/tv_title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title"
