--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -27,7 +27,7 @@
       <android.support.design.widget.CollapsingToolbarLayout
           android:id="@+id/toolbar_layout"
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
+          android:layout_height="wrap_content"
           android:fitsSystemWindows="true"
           app:contentScrim="?attr/colorPrimary"
           app:layout_scrollFlags="scroll|exitUntilCollapsed"
@@ -36,7 +36,7 @@
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/iv_poster"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="350dp"
             android:fitsSystemWindows="true"
             android:scaleType="centerCrop"
             android:transitionName="poster"
@@ -49,10 +49,10 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:transitionName="title"
             app:layout_collapseMode="pin"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="@{movie.title}"
-            android:transitionName="title"
             />
 
       </android.support.design.widget.CollapsingToolbarLayout>
@@ -67,10 +67,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:tint="@android:color/white"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_favorite_pink_24dp"
         />
 
   </android.support.design.widget.CoordinatorLayout>
