--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         >
 
       <android.support.design.widget.CollapsingToolbarLayout
@@ -36,13 +36,12 @@
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/iv_poster"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="460dp"
             android:fitsSystemWindows="true"
             android:scaleType="centerCrop"
             android:transitionName="poster"
             app:imageUrl="@{movie.posterPath}"
             app:layout_collapseMode="parallax"
-            app:srcCompat="@mipmap/ic_launcher"
             />
 
         <android.support.v7.widget.Toolbar
@@ -51,7 +50,7 @@
             android:layout_height="?attr/actionBarSize"
             android:transitionName="title"
             app:layout_collapseMode="pin"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:title="@{movie.title}"
             />
 
